# TodoApp_FastAPI

todoapp_fastapi/: .env  README.md  pyproject.toml
todoapp_fastapi/todoapp_fastapi/: main.py  settings.py
