[tool.poetry]
name = "todoapp-fastapi"
version = "0.1.0"
description = ""
authors = ["Muhammad_Hammad_Shah <Hammad4455shah5544@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"
psycopg = {extras = ["binary"], version = "^3.1.19"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
